# zima

./: .gitignore  CMakeLists.txt  README.md  gui.cpp  gui.hpp  gui_unit.cpp  gui_unit.hpp  main.cpp  resource.qrc
gui/: CMakeLists.txt
gui/include/: gui.hpp  gui_backend.hpp
gui/src/: gui.cpp  gui_backend.hpp
gui/src/qt_backend/: qt_backend.cpp  qt_backend.hpp  resource.qrc
image/: image.cpp  image.hpp
image/parser/: parser.cpp  parser.hpp
renderer/: renderer.cpp  renderer.hpp
tmp/: gui.cpp  gui.hpp  gui_unit.cpp  gui_unit.hpp
